fixed text title overlapping

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -207,6 +207,11 @@
   }
 }
 
+.vw-large-text{
+  font-size: 3.25vw;
+  font-weight: 700;
+}
+
 .summary-border{
   vertical-align: middle;
   padding: .35em;
